--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.13"
   },
   "devDependencies": {
