--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.10.13"
+    "mongoose": "^5.10.13",
+    "express-jwt": "5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
