--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,11 @@
         "targets": {
           "node": "current"
         }
-      }]
+      }
+    ],
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    "react-hot-loader/babel"
   ]
 }
