i have error: Uncaught EvalError: Refused to evaluate a string as JavaScript because 'unsafe-eval' is not an allowed source of script in the following Content Security Policy directive: "script-src 'self'"

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "webpack-node-externals": "^2.5.2"
   },
   "scripts": {
-    "development": "nodemon"
+    "development": "nodemon",
+    "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
+    "start": "NODE_ENV=production node ./dist/server.generated.js"
   },
   "author": "Belykh Uri",
   "license": "ISC"
