forgot this warnig React-Hot-Loader is not supported in this environment: false,`eval` is not allowed(Refused ...

--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,16 @@
     ],
     "@babel/preset-react"
   ],
+//  "plugins": [
+//    "react-hot-loader/babel"
+//
+//  ]
   "plugins": [
-    "react-hot-loader/babel"
+    [
+      "react-hot-loader/babel",
+      {
+        "safetyNet": false
+      }
+    ]
   ]
 }
